2014-02-03 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.4
2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * corrections to README.md
  * small refactoring
  * removed dead code from class_decl_base.rb
  * release 0.0.3
  * fixed dependencies in oval.gemspec
  * release 0.0.2
  * fixed Modulefile
  * release 0.0.1
  * added note to README.md
  * corrected typos in README.md
  * fixed .travis.yml to reduce matrix size
  * fixed coveralls badge
  * fixed some specs for ruby 2.0
  * removed dead code from lib/oval/collection.rb
  * fixed build-puppet-module script
  * initial commit