@@ -2,13 +2,19 @@ require 'spec_helper.rb'
 require 'oval/array_item.rb'
 
 describe Oval::ArrayItem do
+  it "should be subclass of Oval::Base" do
+    described_class.should < Oval::Base
+  end
+
   context 'the class' do
     it { described_class.should respond_to :[] }
   end
+
   context 'an instance' do
     let(:subject) { described_class[:item_decl0] }
     it { should respond_to :validate }
     it { should respond_to :item_decl }
+    it { should respond_to :it_should }
   end
 
   describe "[]" do
@@ -53,6 +59,28 @@ describe Oval::ArrayItem do
       it 'should invoke self.class.ensure_match(:item1,:item_decl0,"foo[0]") once' do
         described_class.expects(:ensure_match).once.with(:item1,:item_decl0,"foo[0]")
         subject.validate(:item1,0,'foo')
+      end
+    end
+  end
+
+  describe "#it_should" do
+    [
+      [:foo, "be equal :foo"],
+      [10, "be equal 10"],
+      [Class.new(Oval::Base) do
+        def it_should
+          "be a test value"
+        end
+        def inspect
+          '<Oval::Test>'
+        end
+      end.new,
+      "be a test value"]
+    ].each do |item_decl,msg|
+      context "#{described_class}[#{item_decl.inspect}].it_should" do
+        let(:item_decl) { item_decl }
+        let(:msg) { msg }
+        it { described_class[item_decl].it_should.should == msg }
       end
     end
   end
