@@ -2,10 +2,15 @@ require 'spec_helper'
 require 'oval/kind_of'
 
 describe Oval::KindOf do
+  it "should be subclass of Oval::ClassDeclBase" do
+    described_class.should < Oval::ClassDeclBase
+  end
+
   describe 'an instance' do
     let(:subject)  { described_class[:klass] }
     before { described_class.stubs(:validate_class) }
     it { should respond_to :validate }
+    it { should respond_to :it_should }
   end
 
   context "#{described_class.name}[:symbol1]" do
@@ -39,6 +44,15 @@ describe Oval::KindOf do
         let(:object) { object }
         let(:msg) { "Invalid object #{object.inspect} of type #{object.class.name}. Should be a kind of #{klass.name}" }
         it { expect { subject.validate(object) }.to raise_error msg }
+      end
+    end
+  end
+
+  describe "#it_should" do
+    [ String, NilClass, Numeric ].each do |klass|
+      context "#{described_class.name}[#{klass.name}].it_should" do
+        let(:klass) { klass }
+        it { described_class[klass].it_should.should == "be a kind of #{klass.name}"}
       end
     end
   end
