@@ -2,11 +2,17 @@ require 'spec_helper'
 require 'oval/one_of'
 
 describe Oval::OneOf do
+  it "should be subclass of Oval::Base" do
+    described_class.should < Oval::Base
+  end
+
   context 'the class' do
     it { described_class.should respond_to :[] }
   end
+
   context 'an instance' do
     it { should respond_to :validate }
+    it { should respond_to :it_should }
     it { should respond_to :decls }
   end
 
@@ -56,6 +62,21 @@ describe Oval::OneOf do
         let(:subject) { described_class[*decls] }
         let(:msg) { msg }
         it { expect { subject.validate(*args) }.to raise_error Oval::ValueError, msg }
+      end
+    end
+  end
+
+  describe "#it_should" do
+    [
+      [ [], "be absent" ],
+      [ [:foo], "be equal :foo"],
+      [ [:foo, :bar], "be equal :foo or be equal :bar"],
+      [ [:foo, :bar, :geez], "be equal :foo, be equal :bar or be equal :geez"],
+    ].each do |decls,msg|
+      context "#{described_class.name}[#{decls.map{|x| x.inspect}.join(', ')}].it_should" do
+        let(:decls) { decls }
+        let(:msg) { msg }
+        it { described_class[*decls].it_should.should == msg}
       end
     end
   end
