@@ -1,4 +1,5 @@
 2014-02-03 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * added it_should method to declarators
   * release 0.0.4
 2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * corrections to README.md
